--- a/package.json
+++ b/package.json
@@ -33,5 +33,6 @@
     "markdown-it": "^8.4.2",
     "nodegit": "^0.23.0",
     "opn": "^5.4.0"
-  }
+  },
+  "avatar":"https://avatars0.githubusercontent.com/u/6204210?s=460&v=4"
 }
